--- a/bird-nest/package.json
+++ b/bird-nest/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "14.2.1",
     "tailwindcss": "^3.4.3",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "autoprefixer": "^10.4.19",
+    "@svgr/webpack": "^8.1.0"
   }
 }
